<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:icon="@drawable/ic_home"
        android:shortcutId="open_home"
        android:shortcutLongLabel="@string/home"
        android:shortcutShortLabel="@string/home">
        <intent
            android:action="com.nadia.frenzy.action.home"
            android:targetClass="com.nadia.frenzy.views.MainActivity"
            android:targetPackage="com.nadia.frenzy" />
    </shortcut>

    <shortcut
        android:icon="@drawable/ic_notifications_active"
        android:shortcutId="open_notifications"
        android:shortcutLongLabel="@string/notifications"
        android:shortcutShortLabel="@string/notifications">
        <intent
            android:action="com.nadia.frenzy.action.notifications"
            android:targetClass="com.nadia.frenzy.views.MainActivity"
            android:targetPackage="com.nadia.frenzy" />
    </shortcut>

    <shortcut
        android:icon="@drawable/ic_people"
        android:drawableTint="@color/black"
        android:shortcutId="open_people"
        android:shortcutLongLabel="@string/people"
        android:shortcutShortLabel="@string/people">
        <intent
            android:action="com.nadia.frenzy.action.people"
            android:targetClass="com.nadia.frenzy.views.MainActivity"
            android:targetPackage="com.nadia.frenzy" />
    </shortcut>

    <shortcut
        android:icon="@drawable/ic_profile"
        android:shortcutId="open_profile"
        android:shortcutLongLabel="@string/profile"
        android:shortcutShortLabel="@string/profile">
        <intent
            android:action="com.nadia.frenzy.action.profile"
            android:targetClass="com.nadia.frenzy.views.MainActivity"
            android:targetPackage="com.nadia.frenzy" />
    </shortcut>
</shortcuts>