<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.views.SettingsActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="143dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo_frenzy"
            tools:layout_editor_absoluteX="-63dp" />

        <TextView
            android:id="@+id/changeStatus"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/corner"
            android:gravity="center"
            android:padding="@dimen/dimen5dp"
            android:text="@string/change_status"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/changeColor"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/corner"
            android:gravity="center"
            android:padding="@dimen/dimen5dp"
            android:text="@string/change_color"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/changeLocation"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/corner"
            android:gravity="center"
            android:padding="@dimen/dimen5dp"
            android:text="@string/change_location"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/changePassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/corner"
            android:gravity="center"
            android:padding="@dimen/dimen5dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Games"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/corner"
            android:gravity="center"
            android:padding="@dimen/dimen5dp"
            android:text="@string/games"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Platforms"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/corner"
            android:gravity="center"
            android:padding="@dimen/dimen5dp"
            android:text="@string/platforms"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</layout>