<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="201dp"
            android:layout_marginBottom="1dp"
            android:src="@drawable/ic_logo_frenzy"
            tools:layout_editor_absoluteX="-63dp"
            android:contentDescription="@string/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            android:layout_marginBottom="4dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputEdit"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:gravity="start"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="250"
                android:textColorHint="@color/darkBlue"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            android:layout_marginBottom="4dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_bio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInputEdit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="start"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="250"
                android:textColorHint="@color/darkBlue"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            android:layout_marginBottom="4dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputEdit"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:gravity="start"
                android:hint="@string/e_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="250"
                android:textColorHint="@color/darkBlue"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="4dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passInputEdit"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="250"
                android:textColorHint="@color/darkBlue"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:padding="@dimen/dimen15dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_message"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="5dp"/>

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>
</layout>