<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="201dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo_frenzy" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen8dp"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/black"
            android:hint="@string/e_email"
            android:inputType="textEmailAddress"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputEdit"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:gravity="start"
                android:lines="1"
                android:maxLength="250"
                android:textColorHint="@color/darkBlue"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen8dp"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="50dp"
            app:boxStrokeColor="@color/black"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passInputEdit"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="start"
                android:hint="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="250"
                android:singleLine="true"
                android:textColorHint="@color/darkBlue"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:background="@drawable/corner"
            android:padding="@dimen/dimen15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registerTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_message"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</layout>