<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userAvatar"
            android:layout_width="@dimen/dimen50dp"
            android:layout_height="@dimen/dimen50dp"
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginEnd="@dimen/dimen5dp"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/green"
            app:civ_border_width="@dimen/dimen1dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/userAvatar"
            android:textSize="@dimen/dimen18sp"
            android:textStyle="bold"
            tools:text="Nadia Belhaj" />

        <TextView
            android:id="@+id/userUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_toEndOf="@id/userAvatar"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            tools:text="NadiaFifa" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_weight="5"
        android:id="@+id/questionEditText"
        android:layout_width="370dp"
        android:maxLength="300"
        android:hint="@string/question_message"
        android:textColor="@color/darkBlue"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_empty"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="7dp"/>

    <RelativeLayout
        android:layout_weight=".1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/corner_empty">

        <TextView
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_marginEnd="@dimen/dimen5dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:textColor="@color/green"
            android:id="@+id/questionLength"
            android:text="@string/question_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/anonymouslySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_marginEnd="@dimen/dimen5dp"
            android:gravity="center"
            android:text="@string/ask_anonymously"
            android:textColor="@color/darkBlue"
            android:textStyle="bold"
            app:switchPadding="@dimen/dimen8dp"
            app:thumbTint="@color/green"
            app:trackTint="@color/darkGreen" />
    </RelativeLayout>
</LinearLayout>
</layout>